fixed location of collapsed navbar

--- a/src/css/gakHeader.css
+++ b/src/css/gakHeader.css
@@ -105,3 +105,7 @@ li a.active {
 	width: 100% !important;
 	height: 100% !important;
 }
+
+.nav-container {
+	padding-top: 20px;
+}
